0.2-beta4

 * Added AT Dyn Document. It's a CMFDynamicDocument like type <XXX more>

0.2-beta3 - 2004-04-20

 * Updated INSTALL.txt [tiran]

 * Fixed default view of ATBTreeFolder and ATFolder (stage 2)
   Both types are using ATContentTypeSchema with TemplateMixinSchema
  [tiran]

 * Added a recreateATImageScales method as external method [tiran]

 * Added missing sharing tab to all ATCTContent based types [tiran]

 * Fixed AT Favorite [jensens]

 * Fixed atct_edit macro [tiran]

0.2-beta2 - 2004-04-11

 * Update validators to reflect the last changes and fixes of the archetypes and
   validation packages. [tiran]
   
 * Added uml diagram of ATCT classes [tiran]

 * misc small fixes and improvements [tiran]
   
0.2-beta1 - 2004-04-09

 * First official beta release for testing [tiran]
